--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - AICTE IDEA LAB | Vel Tech High Tech</title>
+    <title>Contact Us - VISTAS AICTE IDEA LAB | Vel Tech High Tech</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
@@ -35,13 +35,13 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1>VISTAS AICTE IDEA LAB</h1>
                         <h2>CONTACT US</h2>
                     </div>
 
                     <div class="content-section">
                         <div class="contact-intro">
-                            <p>Get in touch with our AICTE IDEA Lab team for inquiries about lab access, project collaboration, equipment usage, training programs, or any other related matters. We're here to support your innovation journey.</p>
+                            <p>Get in touch with our VISTAS AICTE IDEA LAB team for inquiries about lab access, project collaboration, equipment usage, training programs, or any other related matters. We're here to support your innovation journey.</p>
                         </div>
 
                         <div class="contact-information">
@@ -52,7 +52,7 @@
                                     </div>
                                     <div class="contact-details">
                                         <h3>Address</h3>
-                                        <p>AICTE IDEA LAB<br>
+                                        <p>VISTAS AICTE IDEA LAB<br>
                                         Vel Tech High Tech Dr. Rangarajan Dr. Sakunthala Engineering College<br>
                                         Avadi, Chennai - 600062<br>
                                         Tamil Nadu, India</p>
