--- a/coordinators.html
+++ b/coordinators.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coordinators - AICTE IDEA LAB</title>
+    <title>Coordinators - VISTAS AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -20,11 +20,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
@@ -38,7 +38,7 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1>VISTAS AICTE IDEA LAB</h1>
                         <h2>COORDINATORS</h2>
                     </div>
 
@@ -50,9 +50,9 @@
                                         <img src="assets/chandrasekar.jpg" alt="Dr. Chandra Sekran" class="coordinator-photo" />
                                     </div>
                                     <div class="coordinator-info">
-                                        <h3>Dr. Chandra Sekran</h3>
+                                        <h3>Dr. M. Chandrasekaran</h3>
                                         <p class="designation">Mentor</p>
-                                        <p class="department">Director - Department of Mechanical engineering</p>
+                                        <p class="department">Director - Department of Mechanical Engineering</p>
                                     </div>
                                 </div>
 
@@ -61,7 +61,7 @@
                                         <img src="assets/anandan.png" alt="Dr. Chandra Sekran" class="coordinator-photo" />
                                     </div>
                                     <div class="coordinator-info">
-                                        <h3>Dr. Anandan R</h3>
+                                        <h3>Dr. R. Anandan </h3>
                                         <p class="designation">Co-ordinator</p>
                                         <p class="department">Department of Computer Science & Engineering</p>
                                     </div>
@@ -73,9 +73,9 @@
                                             <img src="assets/murali.jpg" alt="Dr. Muraliraja R" class="coordinator-photo" />
                                         </div>
                                         <div class="coordinator-info">
-                                            <h3>Dr. Muraliraja R</h3>
+                                            <h3>Dr. R. Muraliraja </h3>
                                             <p class="designation">Co Co-ordinator</p>
-                                            <p class="department">Department of Mechanical engineering</p>
+                                            <p class="department">Department of Mechanical Engineering</p>
                                         </div>
                                     </div>
                             
