--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AICTE IDEA LAB</title>
+    <title>VISTAS AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -17,11 +17,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link active">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link active">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
@@ -35,7 +35,7 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1 class="mt-5">AICTE IDEA LAB @ VISTAS</h1>
+                        <h1 class="mt-5">VISTAS AICTE IDEA LAB</h1>
                         <h2>OBJECTIVE</h2>
                     </div>
 
@@ -67,7 +67,7 @@
                             <div class="benefits-list">
                                 <div class="benefit-item">
                                     <span class="benefit-number">1. Modern Technological Environment</span>
-                                    <p>The AICTE IDEA Lab is equipped with state-of-the-art hardware and software tools designed to support a wide range of technical and interdisciplinary projects. From prototyping to real-time simulations, the lab offers students and faculty access to modern equipment, workstations, and collaborative tools that enhance the overall learning and research experience. This infrastructure creates a professional environment that mirrors industry standards, encouraging innovation and practical skill development.</p>
+                                    <p>The VISTAS AICTE IDEA LAB is equipped with state-of-the-art hardware and software tools designed to support a wide range of technical and interdisciplinary projects. From prototyping to real-time simulations, the lab offers students and faculty access to modern equipment, workstations, and collaborative tools that enhance the overall learning and research experience. This infrastructure creates a professional environment that mirrors industry standards, encouraging innovation and practical skill development.</p>
                                 </div>
                                 <div class="benefit-item">
                                     <span class="benefit-number">2. Comprehensive Learning Support</span>
@@ -81,6 +81,40 @@
                                 <div class="benefit-item">
                                     <span class="benefit-number">4. Innovation-Driven Entrepreneurship</span>
                                     <p>The IDEA Lab is more than just a technical space—it is a launchpad for entrepreneurship and creative innovation. By fostering a culture of curiosity and experimentation, the lab motivates students to think beyond conventional solutions and explore their entrepreneurial potential. With support for prototype development, idea validation, and community engagement, the lab empowers students and faculty to drive positive change within the institution and the surrounding ecosystem.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="program-benefits">
+                            <h3>PROGRAM BENEFITS</h3>
+                            <div class="benefits-grid">
+                                <div class="benefit-card">
+                                    <div class="benefit-icon">
+                                        <i class="fas fa-graduation-cap"></i>
+                                    </div>
+                                    <h4>Mentorship Excellence</h4>
+                                    <p>Direct access to industry experts and experienced professionals for project guidance and career advice.</p>
+                                </div>
+                                <div class="benefit-card">
+                                    <div class="benefit-icon">
+                                        <i class="fas fa-network-wired"></i>
+                                    </div>
+                                    <h4>Industry Networking</h4>
+                                    <p>Build valuable connections with tech industry leaders and expand professional network.</p>
+                                </div>
+                                <div class="benefit-card">
+                                    <div class="benefit-icon">
+                                        <i class="fas fa-rocket"></i>
+                                    </div>
+                                    <h4>Skill Development</h4>
+                                    <p>Accelerated learning through hands-on experience and expert guidance on cutting-edge technologies.</p>
+                                </div>
+                                <div class="benefit-card">
+                                    <div class="benefit-icon">
+                                        <i class="fas fa-trophy"></i>
+                                    </div>
+                                    <h4>Recognition & Awards</h4>
+                                    <p>Opportunities for recognition through competitions, publications, and industry certifications.</p>
                                 </div>
                             </div>
                         </div>
