--- a/tech-gurus.html
+++ b/tech-gurus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Gurus & Student Ambassadors - AICTE IDEA LAB</title>
+    <title>Tech Gurus & Student Ambassadors - VISTAS AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link active">Tech Gurus & Student Ambassadors</a></li>
@@ -34,7 +34,7 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1>VISTAS AICTE IDEA LAB</h1>
                         <h2>TECH GURUS & STUDENT AMBASSADORS</h2>
                     </div>
 
@@ -119,12 +119,12 @@
 
                                 <div class="tech-guru-card">
                                     <div class="guru-image">
-                                        <img src="assets/padma.png" alt="Dr. Vinod Kumar" class="coordinator-photo" />
+                                        <img src="assets/padma.jpg" alt="Dr. Vinod Kumar" class="coordinator-photo" />
                                     </div>
                                     <div class="guru-info">
-                                        <h4>Dr. Padma.E</h4>
+                                        <h4>Dr. Padma.R</h4>
                                         <div class="specialization">
-                                            <strong>Department:</strong> Data Science & Information Technology
+                                            <strong>Department:</strong> Computing Sciences (Computer Science & IT)
                                         </div>
                                     </div>
                                 </div>
@@ -191,40 +191,6 @@
                                 </div>
                             </div>
                         </div>
-                        </div>
-
-                        <div class="program-benefits">
-                            <h3>PROGRAM BENEFITS</h3>
-                            <div class="benefits-grid">
-                                <div class="benefit-card">
-                                    <div class="benefit-icon">
-                                        <i class="fas fa-graduation-cap"></i>
-                                    </div>
-                                    <h4>Mentorship Excellence</h4>
-                                    <p>Direct access to industry experts and experienced professionals for project guidance and career advice.</p>
-                                </div>
-                                <div class="benefit-card">
-                                    <div class="benefit-icon">
-                                        <i class="fas fa-network-wired"></i>
-                                    </div>
-                                    <h4>Industry Networking</h4>
-                                    <p>Build valuable connections with tech industry leaders and expand professional network.</p>
-                                </div>
-                                <div class="benefit-card">
-                                    <div class="benefit-icon">
-                                        <i class="fas fa-rocket"></i>
-                                    </div>
-                                    <h4>Skill Development</h4>
-                                    <p>Accelerated learning through hands-on experience and expert guidance on cutting-edge technologies.</p>
-                                </div>
-                                <div class="benefit-card">
-                                    <div class="benefit-icon">
-                                        <i class="fas fa-trophy"></i>
-                                    </div>
-                                    <h4>Recognition & Awards</h4>
-                                    <p>Opportunities for recognition through competitions, publications, and industry certifications.</p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </section>
