--- a/vision-mission.html
+++ b/vision-mission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vision & Mission - AICTE IDEA LAB</title>
+    <title>Vision & Mission - VISTAS AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link active">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
@@ -34,7 +34,7 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB @ VISTAS</h1>
+                        <h1>VISTAS AICTE IDEA LAB</h1>
                         <h2>VISION & MISSION</h2>
                     </div>
 
@@ -57,7 +57,7 @@
                             <div class="mission-card">
                                 <div class="card-header">
                                     <i class="fas fa-eye"></i>
-                                    <h3>Integration of IDEA Lab with Existing Facilites</h3>
+                                    <h3>MISSION</h3>
                                 </div>
                                 <div class="card-content">
                                     <ul class="mission-list">
