--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - AICTE IDEA LAB</title>
+    <title>Events - VISTAS AICTE IDEA LAB</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
                 <!-- Sidebar Navigation -->
                 <aside class="sidebar">
                     <div class="sidebar-header">
-                        <h3>AICTE IDEA LAB</h3>
+                        <h3>VISTAS AICTE IDEA LAB</h3>
                     </div>
                     <nav class="sidebar-nav">
                         <ul class="sidebar-menu">
-                            <li><a href="index.html" class="sidebar-link">AICTE IDEA LAB - OBJECTIVE</a></li>
+                            <li><a href="index.html" class="sidebar-link">Objective</a></li>
                             <li><a href="vision-mission.html" class="sidebar-link">Vision & Mission</a></li>
                             <li><a href="coordinators.html" class="sidebar-link">Coordinators</a></li>
                             <li><a href="tech-gurus.html" class="sidebar-link">Tech Gurus & Student Ambassadors</a></li>
@@ -34,13 +34,13 @@
                 <!-- Main Content Area -->
                 <section class="content-area">
                     <div class="page-header">
-                        <h1>AICTE IDEA LAB</h1>
+                        <h1>VISTAS AICTE IDEA LAB</h1>
                         <h2>EVENTS</h2>
                     </div>
 
                     <div class="content-section">
                         <div class="events-intro">
-                            <p>The AICTE IDEA Lab regularly organizes various events, workshops, and programs to foster innovation, enhance technical skills, and promote entrepreneurship among students and faculty. These events are designed to bridge the gap between academic learning and industry requirements.</p>
+                            <p>The VISTAS AICTE IDEA LAB regularly organizes various events, workshops, and programs to foster innovation, enhance technical skills, and promote entrepreneurship among students and faculty. These events are designed to bridge the gap between academic learning and industry requirements.</p>
                         </div>
 
                         <div class="annual-events">
